<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        android:paddingBottom="20dp"
        tools:context=".view.faskes.FaskesDetailActivity">

        <TextView
            android:id="@+id/tvFaskesName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="16dp"
            android:textColor="?android:textColorPrimary"
            android:layout_marginTop="16dp"
            android:text="@string/faskes_name" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:layout_marginTop="16dp"
            android:text="@string/faskes_kind"
            app:drawableStartCompat="@drawable/ic_baseline_medical_services_24" />

        <TextView
            android:id="@+id/tvFaskesType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="34dp"
            android:textColor="?android:textColorPrimary"
            android:textSize="16sp"
            android:text="@string/not_available"
            tools:text="@tools:sample/lorem" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawablePadding="10dp"
            android:text="@string/vaccine_status"
            app:drawableStartCompat="@drawable/ic_baseline_check_24" />

        <TextView
            android:id="@+id/tvFaskesStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="34dp"
            android:textColor="?android:textColorPrimary"
            android:textSize="16sp"
            android:text="@string/not_available"
            tools:text="@tools:sample/lorem" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawablePadding="10dp"
            android:text="@string/no_telp"
            app:drawableStartCompat="@drawable/ic_baseline_call_24" />

        <TextView
            android:id="@+id/tvTelp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="34dp"
            android:textColor="?android:textColorPrimary"
            android:textSize="16sp"
            android:text="@string/not_available"
            tools:text="@tools:sample/us_phones" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawablePadding="10dp"
            android:text="@string/address"
            app:drawableStartCompat="@drawable/ic_baseline_location_on_24" />

        <TextView
            android:id="@+id/tvAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="34dp"
            android:textColor="?android:textColorPrimary"
            android:textSize="16sp"
            tools:text="@tools:sample/lorem" />

        <Button
            android:id="@+id/btnMaps"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:layout_marginTop="100dp"
            android:backgroundTint="@color/blue_200"
            android:text="@string/maps"
            app:icon="@drawable/ic_baseline_map_24"
            android:layout_gravity="center"/>
    </LinearLayout>
</ScrollView>