<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.main.MainActivity">

    <View
        android:id="@+id/viewBackground"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:background="@color/blue_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        card_view:cardCornerRadius="16dp"
        card_view:cardElevation="0dp">

        <ImageView
            android:id="@+id/imgIcon"
            android:layout_width="330dp"
            android:layout_height="230dp"
            android:background="@color/white"
            android:contentDescription="@string/statistic_image"
            android:src="@drawable/statistic_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </com.google.android.material.card.MaterialCardView>

    <View
        android:id="@+id/viewLine"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@id/cvImage" />

    <TextView
        android:id="@+id/category"
        style="@style/TextContent.Bold.Big"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/category"
        android:textColor="?android:textColorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewLine" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvDailyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/cvTotalButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cvTotalButton"
        card_view:cardElevation="0dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgDaily"
                android:layout_width="80dp"
                android:layout_height="70dp"
                android:background="@drawable/image_border"
                android:contentDescription="@string/daily_button"
                android:cropToPadding="true"
                android:src="@drawable/statistics_icon_96" />

            <TextView
                android:id="@+id/tvDaily"
                style="@style/TextContent.Bold.small"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:lines="2"
                android:text="@string/daily"
                android:textColor="?android:textColorPrimary" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvTotalButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/category"
        card_view:cardElevation="0dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgTotal"
                android:background="@drawable/image_border"
                android:layout_width="80dp"
                android:layout_height="70dp"
                android:contentDescription="@string/total_button"
                android:src="@drawable/total_case" />

            <TextView
                android:id="@+id/tvTotal"
                style="@style/TextContent.Bold.small"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/total"
                android:textColor="?android:textColorPrimary" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvProvinceButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cvTotalButton"
        app:layout_constraintTop_toTopOf="@+id/cvTotalButton"
        card_view:cardElevation="0dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgProvince"
                android:layout_width="80dp"
                android:layout_height="70dp"
                android:background="@drawable/image_border"
                android:contentDescription="@string/province_button"
                android:src="@drawable/place_icon_64" />

            <TextView
                android:id="@+id/tvProvince"
                style="@style/TextContent.Bold.small"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/province"
                android:textColor="?android:textColorPrimary" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvFaskesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/cvDailyButton"
        app:layout_constraintStart_toStartOf="@+id/cvDailyButton"
        app:layout_constraintTop_toTopOf="@+id/cvHospitalButton"
        card_view:cardElevation="0dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgFaskes"
                android:background="@drawable/image_border"
                android:layout_width="80dp"
                android:layout_height="70dp"
                android:contentDescription="@string/faskes_button"
                android:src="@drawable/hospital_icon" />

            <TextView
                android:id="@+id/tvFaskes"
                style="@style/TextContent.Bold.small"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:lines="2"
                android:text="@string/faskes"
                android:textColor="?android:textColorPrimary" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvHospitalButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="@+id/cvTotalButton"
        app:layout_constraintStart_toStartOf="@+id/cvTotalButton"
        app:layout_constraintTop_toBottomOf="@+id/cvTotalButton"
        card_view:cardElevation="0dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgHospital"
                android:background="@drawable/image_border"
                android:layout_width="80dp"
                android:layout_height="70dp"
                android:contentDescription="@string/rumah_sakit_rujukan_button"
                android:src="@drawable/hospital" />

            <TextView
                android:id="@+id/tvHospital"
                style="@style/TextContent.Bold.small"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:lines="3"
                android:text="@string/rumah_sakit_rujukan"
                android:textColor="?android:textColorPrimary" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvExit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        card_view:cardElevation="0dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgExit"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:background="@color/blue_500"
                android:contentDescription="@string/exit_button"
                android:src="@drawable/ic_baseline_exit_to_app_24" />

            <TextView
                android:id="@+id/tvExit"
                style="@style/TextContent.Bold.small"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/exit"
                android:textColor="?android:textColorPrimary" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>