<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.daily.DailyActivity">

    <TextView
        android:id="@+id/tvStatistic"
        style="@style/TextContent.Bold.Big"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/daily_report"
        android:textColor="?android:textColorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvStatDesc"
        style="@style/TextContent"
        android:textColor = "?android:textColorPrimary"
        android:layout_marginTop="4dp"
        android:text="@string/stat_desc"
        app:layout_constraintEnd_toEndOf="@+id/tvStatistic"
        app:layout_constraintStart_toStartOf="@+id/tvStatistic"
        app:layout_constraintTop_toBottomOf="@+id/tvStatistic" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvPositive"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:cardCornerRadius="25dp"
        android:backgroundTint="@color/yellow"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/tvStatDesc"
        app:layout_constraintTop_toBottomOf="@+id/tvStatDesc">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp">

            <TextView
                android:id="@+id/tvPositiveCount"
                style="@style/TextContent.Bold.Big"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:fontFamily="serif"
                android:text="@string/positive_count"
                android:textColor="@color/black"
                android:textSize="28sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvPositiveDescription"
                style="@style/TextContent.Bold.Medium"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/positive"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tvPositiveCount"
                app:layout_constraintTop_toBottomOf="@+id/tvPositiveCount" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvRecover"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:cardCornerRadius="25dp"
        android:backgroundTint="@color/green"
        app:layout_constraintBottom_toBottomOf="@+id/cvPositive"
        app:layout_constraintEnd_toEndOf="@+id/tvStatDesc"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/cvPositive">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp">

            <TextView
                android:id="@+id/tvRecoverCount"
                style="@style/TextContent.Bold.Big"
                android:textColor = "@color/white"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:fontFamily="serif"
                android:textSize="28sp"
                android:text="@string/recover_count"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvRecoverDescription"
                style="@style/TextContent.Bold.Medium"
                android:textColor = "@color/white"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/recover"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tvRecoverCount"
                app:layout_constraintTop_toBottomOf="@+id/tvRecoverCount" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvDie"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="25dp"
        android:backgroundTint="@color/red"
        app:layout_constraintEnd_toEndOf="@+id/cvPositive"
        app:layout_constraintStart_toStartOf="@+id/cvPositive"
        app:layout_constraintTop_toBottomOf="@+id/cvPositive">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp">

            <TextView
                android:id="@+id/tvDieCount"
                style="@style/TextContent.Bold.Big"
                android:textColor = "@color/white"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:fontFamily="serif"
                android:textSize="28sp"
                android:text="@string/die_count"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvDieDescription"
                style="@style/TextContent.Bold.Medium"
                android:textColor = "@color/white"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/die"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tvDieCount"
                app:layout_constraintTop_toBottomOf="@+id/tvDieCount" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvHospitalized"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="25dp"
        android:backgroundTint="@color/grey"
        app:layout_constraintEnd_toEndOf="@+id/cvRecover"
        app:layout_constraintStart_toStartOf="@+id/cvRecover"
        app:layout_constraintTop_toBottomOf="@+id/cvRecover">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp">

            <TextView
                android:id="@+id/tvHospitalizedCount"
                style="@style/TextContent.Bold.Big"
                android:textColor = "?android:textColorPrimary"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:fontFamily="serif"
                android:textSize="28sp"
                android:text="@string/hospitalized_count"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvHospitalizedDescription"
                style="@style/TextContent.Bold.Medium"
                android:textColor = "?android:textColorPrimary"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/hospitalized"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tvHospitalizedCount"
                app:layout_constraintTop_toBottomOf="@+id/tvHospitalizedCount" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:elevation="7dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>
</androidx.constraintlayout.widget.ConstraintLayout>